--- a/src/main/styles/main.scss
+++ b/src/main/styles/main.scss
@@ -9,7 +9,7 @@ a {
 }
 
 .app-container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   color: rgb(56, 76, 85);
   display: flex;
@@ -111,4 +111,25 @@ a {
   top: 0;
   bottom: 0;
   width: 100%;
+}
+
+@media screen and (min-width: 450px) {
+
+  .top-nav {
+    width: 30vw !important;
+  }
+
+  .bottom-nav {
+    width: 30vw !important;
+  }
+
+  body {
+    width: 30vw !important;
+  }
+
+  .mapboxgl-canvas {
+    width: 30vw !important;
+    color: red !important;
+  }
+
 }
